Changing scrollbar plugin (old one was slow and buggy), loading block.css automatically

--- a/engine/lithium/builder/admin.less
+++ b/engine/lithium/builder/admin.less
@@ -171,3 +171,22 @@
 .bootstrap-select.open {
   z-index: 9999;
 }
+
+.os-theme-dark>.os-scrollbar-vertical,
+.os-theme-light>.os-scrollbar-vertical {
+  padding: 2px 0;
+  width: 6px;
+}
+
+.os-theme-dark>.os-scrollbar.os-scrollbar-unusable,
+.os-theme-dark>.os-scrollbar>.os-scrollbar-track,
+.os-theme-light>.os-scrollbar.os-scrollbar-unusable,
+.os-theme-light>.os-scrollbar>.os-scrollbar-track {
+  background: none;
+}
+
+.os-theme-dark>.os-scrollbar>.os-scrollbar-track>.os-scrollbar-handle {
+  background: #2ab0ad;
+  border-radius: 5px;
+  opacity: 1;
+}
